add auto search function.
